oy - register out

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         }
 
         .gift-link {
-            font-size: 0.95rem;
+            font-size: 1.2rem;
             color: #a58256;
             text-decoration: none;
             font-weight: 500;
@@ -295,7 +295,7 @@
     <div class="top-links">
         <!-- <a href="confirmacion.html">Registrarse</a> -->
         <a href="regalos.html">Regalos</a>
-        <a href="instrucciones.html">Consideraciones</a>
+        <a href="instrucciones.html">Instrucciones</a>
     </div>
 
     <!-- Hero con texto desplazado hacia abajo -->
@@ -338,9 +338,10 @@
 
             <p>Código de vestimenta: Formal</p>
             <br>
-            <p>Será un honor contar con su presencia en este día tan especial.</p>
+            <p>Para garantizar la seguridad y comodidad de todos, el acceso al evento será únicamente con el DNI y el nombre
+            previamente registrado por cada invitado.</p>
 
-            <p>¡Los esperamos!</p>
+            <!-- <p>¡Los esperamos!</p> -->
             <br>
             <!-- <h4 >Confirma tu asistencia aquí</h4>
                 <a href="confirmacion.html">
@@ -349,14 +350,14 @@
             <!-- <p>registros solo hasta el 12 de Agosto</p> -->
             <!-- <br> -->
             <!-- <br> -->
-            <p>
+            <h1>
                 <a href="regalos.html" class="gift-link">→ Si deseas tener un detalle con nosotros, aquí te compartimos algunas
                     ideas</a>
-            </p>
+            </h1>
             <br>
-            <p>
-                <a href="instrucciones.html" class="gift-link">→ Otras consideraciones importantes</a>
-            </p>
+            <h1>
+                <a href="instrucciones.html" class="gift-link">→ Detalles importantes</a>
+            </h1>
 
         </div>
     </section>
